Added build actions for usecase-compass service
Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>